# ResMan

./: .gitignore  CMakeLists.txt  README.md  all_res.hpp  compile_commands.json  main.cpp
.github/workflows/: Build.yml  Publish_Release.yml  make_binarys.yml
